from sqlalchemy import String
from sqlalchemy.orm import Mapped, mapped_column
from database import Base


class Position(Base):
    __tablename__ = "positions"

    id:   Mapped[int] = mapped_column(primary_key=True)
    name: Mapped[str] = mapped_column(String(100), nullable=False)
