from sqlalchemy import String
from sqlalchemy.orm import Mapped, mapped_column
from database import Base


class Subject(Base):
    __tablename__ = "subjects"

    id:   Mapped[int] = mapped_column(primary_key=True)
    name: Mapped[str] = mapped_column(String(200), nullable=False)
